@@ -11,6 +11,7 @@
     * Add Net::SSLeay::SSL_CTX#set_next_protos_advertised_cb_with_protocols method.
     * Add Net::SSLeay::Callback::NewSession class.
     * Add Net::SSLeay::Callback::RemoveSession class.
+    * Add Net::SSLeay::SSL_CTX#sess_set_new_cb method.
 0.014 2024-11-19
   [New Features]
     * Add Net::SSLeay::OCSP#single_get0_status method.
